--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "m2": "node --experimental-modules m2.js",
-    "http-app-start": "node --experimental-modules server.js"
+    "http-app-start": "node --experimental-modules server.js",
+    "express-app-start": "node --experimental-modules app.js"
   },
   "author": "Raul",
   "license": "ISC",
