--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "m2": "node --experimental-modules m2.js",
-    "http-app-start": "node --experimental-modules server.js",
-    "express-app-start": "node --experimental-modules app.js"
+    "http-app-start": "nodemon --experimental-modules server.js",
+    "express-app-start": "nodemon --experimental-modules app.js"
   },
   "author": "Raul",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "esm": "^3.2.25",
     "express": "github:expressjs/express",
     "lodash": "^4.17.15",
+    "nodemon": "^2.0.2",
     "npm": "^6.14.2"
   }
 }
